# streval

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
include/: identifier.h  level.h  oper.h  parsing_error.h  parsing_result.h  scope.h  streval.h
src/: identifier.cpp  oper.cpp  scope.cpp  streval.cpp  streval_utils.cpp
tests/: eval_test.cpp  testcase.h
